2002-01-15  Benjamin Kosnik  <bkoz@redhat.com>
	    Alexandre Oliva  <aoliva@redhat.com>

	* libmath/Makefile.am (LINK): Add --tag CC.
	* libmath/Makefile.in: Regenerate.

2002-01-15  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* config/os/hpux/bits/ctype_noninline.h: Use __SB_masks for address
	of character to attribute mapping table.

2002-01-15  David Billinghurst <David.Billinghurst@riotinto.com>

	* testsuite/26_numerics/c99_classification_macros_c.cc
	Remove dg-error and dg-excess-errors comments.

2002-01-14  Benjamin Kosnik  <bkoz@redhat.com>

	* include/bits/locale_facets.tcc (time_put::put): Correct output
	iterator positions.
	* testsuite/22_locale/time_put_members_char.cc (test02): Add.
	* testsuite/22_locale/time_put_members_wchar_t.cc (test02): Add.
	* testsuite/22_locale/time_get_members_wchar_t.cc (test06): Add.
	* testsuite/22_locale/time_get_members_char.cc (test06): Add.

2002-01-14  Craig Rodrigues  <rodrigc@gcc.gnu.org>

	* docs/html/17_intro/porting-howto.xml: Update filebuf section.

2002-01-14  Paolo Carlini  <pcarlini@unitus.it>
	    Nathan Myers  <ncm@cantrip.org>

	* include/bits/basic_string.h
	(replace(__pos, __n1, __s, __n2)): Optimize by avoiding
	temporaries (i.e., call _M_replace_safe) when possible.
	(replace(__pos, __n, __str)): Call replace(__pos, __n1, __s, __n2).
	(replace(__pos, __n1, __s)): Call replace(__pos, __n1, __s , __n2).
	(replace(__i1, __i2, __str)): Call replace(__i1, __i2, __s, __n).
	(replace(__i1, __i2, __s)): Call replace(__i1, __i2, __s, __n).
	(replace(__i1, __i2, __s, __n)): Call replace(__pos1, __n1, __s, __n2).
	* include/bits/basic_string.tcc
	(replace(__pos1, __n1, __str, __pos2, __n2)): Call
	replace(__pos, __n1, __s, __n2).
	* testsuite/21_strings/replace.cc (test03): New testcases.

	* include/bits/basic_string.h (insert(__pos, __s, __n)):
	Adjust comparison wrt overflow.
	
2002-01-12  Benjamin Kosnik  <bkoz@redhat.com>

	* include/Makefile.am (std_headers_rename): New variable.